Large commit for Rivet integration
This commit imports the [O2Rivet](https://gitlab.com/cholmcc/O2Rivet)
project into O2Physics.

This project aims to enable running Rivet analyses on existing
and future simulation productions, locally, on CVMFS, on Grid,
and with HyperLoop.

The main component is the DPL `o2-analysis-mm-rivet`.  This reads in MC
AODs (via f.ex. `o2-aod-mc-producer-workflow`), converts the events to
HepMC events, and then runs Rivet analyses on these.  The output is an
`o2::rivet::RivetAOs` object stored in the generated
`AnalysisResults.root` file.

The tool supports partial runs (e.g., parallel processing on Grid), and
merging, including the `Rivet::Analysis::finalize` step, via regular
ROOT merging.

The tool also supports compiling analyses on the fly.  This is useful in
Grid or similar settings, and for developing and testing analyses not
yet accepted into an official repository.

Examples of using the tool are given in `PWGMM/Rivet/doc` along with
some other documentation.

Compilation of the tool is contingent on the presence of Rivet (and its
requirements YODA, FastJetContrib, and HepMC3) on the target system.
The feature is marked as _recommended_ via optional, but recommended,
build dependencies on Rivet and YODA.

--- a/PWGMM/Rivet/Tasks/CMakeLists.txt
+++ b/PWGMM/Rivet/Tasks/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright 2019-2020 CERN and copyright holders of ALICE O2.
+# Copyright 2019-2099 CERN and copyright holders of ALICE O2.
 # See https://alice-o2.web.cern.ch/copyright for details of the copyright holders.
 # All rights not expressly granted are reserved.
 #
@@ -9,11 +9,22 @@
 # granted to it by virtue of its status as an Intergovernmental Organization
 # or submit itself to any jurisdiction.
 
-add_subdirectory(Core)
-add_subdirectory(DataModel)
-add_subdirectory(TableProducer)
-add_subdirectory(Tasks)
-add_subdirectory(Lumi)
-add_subdirectory(Mult)
-add_subdirectory(UE)
-add_subdirectory(Rivet)
+if (TARGET Rivet)
+  o2physics_add_dpl_workflow(rivet
+    SOURCES rivet.cxx
+    PUBLIC_LINK_LIBRARIES
+    O2::Framework
+    O2::FrameworkFoundation
+    O2::SimulationDataFormat
+    O2::Headers
+    O2::Steer
+    # O2::Mergers
+    O2::Generators
+    Rivet::Rivet
+    Yoda::Yoda
+    O2Physics::RivetOutput
+    COMPONENT_NAME Analysis)
+endif(TARGET Rivet)
+#
+# EOF
+#
