--- a/PWGMM/Rivet/doc/examples/simple.sh.in
+++ b/PWGMM/Rivet/doc/examples/simple.sh.in
@@ -30,7 +30,7 @@ o2-aod-mc-producer-workflow                \
         --rivet-dump simple_Kine.yoda      \
         --rivet-analysis ALICE_YYYY_I1234567               \
         --rivet-pwd                        \
-        --rivet-sources @CMAKE_CURRENT_SOURCE_DIR@/doc/analyses/ALICE_YYYY_I1234567.cc   \
+        --rivet-sources @CMAKE_CURRENT_SOURCE_DIR@/doc/analyses/ALICE_YYYY_I1234567.C   \
         --rivet-load-paths @CMAKE_CURRENT_SOURCE_DIR@/doc/analyses          \
         --rivet-finalize                   \
         --batch                            \
