--- a/PWGMM/Rivet/doc/examples/simple.sh.in
+++ b/PWGMM/Rivet/doc/examples/simple.sh.in
@@ -19,10 +19,18 @@ o2-sim                                                           \
     -n 10                                                        \
     -g pythia8pp                                                 \
     -o simple                                                    \
+    --seed 12345                                                 \
     --noGeant                                                    \
     --configKeyValues "GeneratorPythia8.includePartonEvent=true"
 
-# Run Rivet analyses - we use our simple example analysis ALICE_YYYY_I1234567
+# Run Rivet analyses - we use our simple example analysis
+# ALICE_YYYY_I1234567.
+#
+# Pass `--hepmc-update never` to `o2-aod-mc-producer` to not make
+# HepMC Aux tables.
+#
+# Pass `--hepmc-no-aux` to `o2-analysis-mm-rivet` to not process HepMC
+# aux tables.
 o2-aod-mc-producer-workflow                \
     --mckine-fname simple |                \
     o2-analysis-mm-rivet                   \
@@ -36,8 +44,10 @@ o2-aod-mc-producer-workflow                \
         --batch                            \
         $@
 
-# Plot result of analysis - using a simple Python scriptx
-@CMAKE_CURRENT_SOURCE_DIR@/doc/analyses/ALICE_YYYY_I1234567.py simple_Kine.yoda
+# Plot result of analysis - using a simple Python script
+#
+# Pass option `-s` to save plot to PNG.
+@CMAKE_CURRENT_SOURCE_DIR@/doc/analyses/ALICE_YYYY_I1234567.py -s simple_Kine.yoda
 
 #
 # EOF
